--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Staatliches&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <script type="module" src="./index.js" defer></script>
-    
+        
     <title>Booklist</title>
 </head>
 
@@ -66,8 +65,10 @@
         </section>
     </div>
     <footer class="footer">
-        Copyright    &copy tashLibraries!
+        Copyright &copy tashLibraries!
     </footer>
+
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
