--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
     </div>
     <footer class="footer">
-        Copyright &copy tashLibraries!
+        Copyright t@ tashLibraries!
     </footer>
 
     <script type="module" src="./index.js"></script>
